--- a/how-to/tree-type/index.html
+++ b/how-to/tree-type/index.html
@@ -257,10 +257,10 @@
     </ol>
     <footer class="footer">
       <div class="footer__social-box">
-        <a href="/"><img class="footer__social-icon" src="../../dist/images/common/icn_youtube.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../../dist/images/common/icn_insta.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../../dist/images/common/icn_facebook.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../../dist/images/common/icn_twitter.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
       </div>
       <div class="footer-link-area">
         <div class="footer-link-area__box-wrapper">
@@ -273,73 +273,63 @@
             <li class="footer-link-area__main-menu"><a href="#">ログイン</a></li>
           <ul>
         </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">香川県の盆栽園</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
-          <ul>
-        </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽の基礎知識</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">日本各地の盆栽園</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">初めての盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の選び方</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の道具</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">室内で楽しむ盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">季節を楽しむ盆栽</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">海外で人気のBONSAI</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の歴史</a></li>
-          <ul>
-        </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽の育て方</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">剪定の方法、時期</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">用土の作り方</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">水やり</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">置き場所</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">肥料のやり方、時期</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">植え替えの方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">挿し木の方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">接ぎ木の方法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">枯れる原因と対処法</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">月ごとの手入れ</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">樹種別の手入れ、育て方</a></li>
-          <ul>
-        </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">盆栽用語辞典</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">あ行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">か行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">さ行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">た行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">な行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">は行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">ま行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">や行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">ら行</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">わ行</a></li>
-          <ul>
-        </div>
-        <div class="footer-link-area__box-wrapper">
-          <p class="footer-link-area__main-menu"><a href="#">ショッピングガイド</a></p>
-          <ul>
-            <li class="footer-link-area__local-menu"><a href="#">商品のご注文について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">お支払い方法について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">配送・送料について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">盆栽の梱包・箱詰めについて</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">注文の取消・返品について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">会員登録、退会について</a></li>
-            <li class="footer-link-area__local-menu"><a href="#">商品説明について</a></li>
-          <ul>
-        </div>
+        <dl class="footer-link-area__box-wrapper">
+          <dt class="footer-link-area__main-menu"><a href="#">香川県の盆栽園</a></p>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+        </dl>
+        <dl class="footer-link-area__box-wrapper">
+          <dt class="footer-link-area__main-menu"><a href="#">盆栽の基礎知識</a></p>
+          <dd class="footer-link-area__local-menu"><a href="#">日本各地の盆栽園</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">初めての盆栽</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">盆栽の選び方</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">盆栽の道具</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">室内で楽しむ盆栽</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">季節を楽しむ盆栽</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">海外で人気のBONSAI</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">盆栽の歴史</a></li>
+        </dl>
+        <dl class="footer-link-area__box-wrapper">
+          <dt class="footer-link-area__main-menu"><a href="#">盆栽の育て方</a></p>
+          <dd class="footer-link-area__local-menu"><a href="#">剪定の方法、時期</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">用土の作り方</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">水やり</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">置き場所</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">肥料のやり方、時期</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">植え替えの方法</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">挿し木の方法</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">接ぎ木の方法</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">枯れる原因と対処法</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">月ごとの手入れ</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">樹種別の手入れ、育て方</a></li>
+        </dl>
+        <dl class="footer-link-area__box-wrapper">
+          <dt class="footer-link-area__main-menu"><a href="#">盆栽用語辞典</a></p>
+          <dd class="footer-link-area__local-menu"><a href="#">あ行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">か行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">さ行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">た行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">な行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">は行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">ま行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">や行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">ら行</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">わ行</a></li>
+        </dl>
+        <dl class="footer-link-area__box-wrapper">
+          <dt class="footer-link-area__main-menu"><a href="#">ショッピングガイド</a></p>
+          <dd class="footer-link-area__local-menu"><a href="#">商品のご注文について</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">お支払い方法について</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">配送・送料について</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">盆栽の梱包・箱詰めについて</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">注文の取消・返品について</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">会員登録、退会について</a></li>
+          <dd class="footer-link-area__local-menu"><a href="#">商品説明について</a></li>
+        </dl>
         <div class="footer-link-area__box-wrapper">
           <ul>
             <li class="footer-link-area__main-menu"><a href="#">特定商取引に関する<br class="footer-link-area__br--pc">法律に基づく表記</a></li>
@@ -351,7 +341,7 @@
       </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
       <div class="footer__site-logo">
-        <img src="../../dist/images/common/site-logo.png">
+        <img src="./dist/images/common/site-logo.png">
       </div>
       <p class="footer__copyright">© 2019 bon all rights reserved.</p>
     </footer>
